fix card gap

--- a/src/assets/styles/dashboard.css
+++ b/src/assets/styles/dashboard.css
@@ -132,7 +132,7 @@ figure {
 .d-1 {
   font-family: 'Aeonik', sans-serif;
   margin-bottom: 3rem;
-  gap: 24px;
+  gap: 16px;
 }
 
 .c-1-span {
